Код готов к проверке №2 1. Убрал импорт через * 2. Использовал интерфейсы в InMemoryHistoryManager 3. Реализовал использование linkLast и getTasks в тестах 4. Использовал интерфейсы в InMemoryTaskManager